fix backgrounf gradient and dark mode colors

--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -117,6 +117,7 @@
 
         .navbar-toggler-icon {
             background-image: url('../../../../assets/svg/menu.svg');
+            filter: var(--primary-color-filter);
 
             &:hover, &:focus, &.active {
                 opacity: .6;
