--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,5 +1,6 @@
 :root {
     --primary-color: #fff;
+    --primary-color-filter: unset;
 
     --primary-color-rgba-10: rgba(255, 255, 255, 0.1);
     --primary-color-rgba-20: rgba(255, 255, 255, 0.2);
